# llmpick

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llmpick/: __init__.py  cli.py  core.py  hardware.py  models.py  types.py
tests/: test_core.py  test_hardware.py  test_models.py
